<resources>
    <string name="app_name">巡线</string>

    <!-- Menu -->
    <string name="action_start">开始</string>
    <string name="action_stop">停止</string>
    <string name="action_preference">设置</string>

    <!-- Path -->
    <string name="imageProviderAuthority">labs.zero_one.patroute.fileprovider</string>
    <string name="internetTimeHost">ntp7.aliyun.com</string>

    <!-- Dialog -->
    <string name="success">成功</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="submit">提交</string>
    <string name="unavailable">不可用</string>
    <string name="check">检查</string>

    <!-- Alert -->
    <string name="alert_warning_title">警告</string>
    <string name="alert_location_service_unavailable">定位功能不可用</string>
    <string name="alert_cant_get_location">无法获取位置</string>
    <string name="alert_mock_location">位置模拟已开启，请关闭此功能</string>
    <string name="alert_emulator">检测到模拟器</string>
    <!-- Permission -->
    <string name="alert_permission_title">请求权限</string>
    <string name="alert_permission_location">本应用需要访问您的位置以提供服务。</string>
    <string name="alert_permission_internet">本应用需要连接互联网以提供服务。</string>
    <string name="alert_permission_storage">本应用需要访问您的储存以提供地图服务。</string>
    <string name="system_settings">设置</string>
    <!-- Reach Waypoint -->
    <string name="alert_reach_waypoint_title">已到达检查点</string>
    <string name="alert_reach_waypoint_message">请检查 %s</string>
    <string name="alert_reach_waypoint_checked">正常</string>
    <string name="alert_reach_waypoint_report">报告</string>

    <!-- Mission -->
    <string name="loading">正在载入</string>
    <string name="missionID">任务 ID</string>
    <string name="location">位置</string>
    <string name="waypoint">检查点</string>
    <string name="longitude">经度</string>
    <string name="latitude">纬度</string>
    <string name="distance">距离</string>
    <string name="distanceMetre">%.2f 米</string>
    <string name="distanceKM">%.2f 千米</string>
    <string name="time">时间</string>
    <string name="description">描述</string>
    <string name="description_enter">输入描述</string>
    <string name="mission_title">任务</string>
    <string name="finished">已完成</string>
    <string name="unfinished">未完成</string>
    <string name="stop_success">任务停止，日志已成功提交。</string>
    <string name="stop_failed">任务停止失败</string>

    <!-- Mission Log-->
    <string name="iso_datatime">yyyy-MM-dd\'T\'HH:mm:ss\'Z\'</string>
    <string name="log_headline">任务日志\n</string>
    <string name="log_ver">VER %s %d</string>
    <string name="log_mid">MID %s</string>
    <string name="log_uid">UID %s</string>
    <string name="log_msg">%s %s %f %f %s</string>
    <string name="log_head_loc">LOC</string>
    <string name="log_head_sta">STA</string>
    <string name="log_head_chk">CHK</string>
    <string name="log_head_rep">REP</string>
    <string name="log_head_wrn">WRN</string>
    <string name="log_lineFormat">[%s]: %s\n</string>
    <string name="log_mission_started">任务开始</string>
    <string name="log_mission_stopped">任务停止</string>
    <string name="log_mission_paused">任务暂停</string>
    <string name="log_mission_resume">任务继续</string>
    <string name="log_locationUpdate">位置更新 (%f, %f)</string>
    <string name="log_issueSubmitted">提交报告 %s (%s, %s) %s</string>
    <string name="log_checked">已检查 %s</string>
    <string name="log_trume_mock_location">检测到模拟位置开启</string>
    <string name="log_trume_time_trick">检测到时间错误\n网络时间：%s\n设备时间：%s</string>

</resources>
